assets/main.scss
/* ... */
.btn-outline-primary, .btn-outline-secondary {
    --bs-btn-hover-color:  #fff;
    --bs-btn-active-color: #fff;
}

//noinspection CssUnknownTarget
body {
    background-image: url(/images/page-bg.png);
    font-family: 'Arimo', sans-serif;
}
.ua-bg {
    background-image: url(https://res.cloudinary.com/yktoo/image/upload/blog/knsuwdtzc44va1hjiw8m.png);
    background-repeat: no-repeat;
    background-position: 5% 50%;
}
#page {
    padding-bottom: 40px;
    background: #fff;
}
#footer {
    padding: 1rem;
    text-align: center;
    color: $gray-400;
    font-size: 90%;

    a {
        color: $primary-light;
        &:hover, &:focus {
            color: $primary-accent;
            background-color: transparent;
        }
        &.active {
            color: #fff;
        }
    }
    .nav-item {
        text-align: left;
    }
    .nav-link {
        padding: .2rem 2rem;
    }
}

.opener-image {
    margin: 0 0 1rem 0;
    width: 100%;
    height: auto;
    border-radius: 6px;

    @include media-breakpoint-up(sm) {
        float: left;
        margin: 0.5em 2em 1em 0;
        max-width: 250px;
    }
}

section {
    margin-bottom: 2rem;
}
article {
    .article-sidebar {
        font-size: 90%;
        background-color: $gray-100;
        margin-top: -1rem;
        padding-bottom: 1rem;

        .sticky-top {
            padding-top: 1rem;
        }

        ul {
            padding-left: 1rem;
            margin-bottom: 0;
        }
        section {
            margin-bottom: 1rem;
        }
    }
}

// Anchors
a {
    transition: all .2s ease-in;

    // Add a dark background on hover to non-image links
    &:not(.btn):not(.image-link):not(.card-link-overlay) {
        &:hover, &:focus {
            background-color: $link-hover-bg;
        }
    }

    // Internal links lead to pages on this same website, they get dashed underlining
    &.internal {
        border-bottom: 1px dashed #5a9681;
    }

    &.wikipedia:after {
        content: "w";
        vertical-align: super;
        padding-left: 2px;
        font-family: serif;
        font-size: 65%;
    }
}

// Buttons
.btn-outline-dark {
    --bs-btn-active-color: #{$primary-accent};
}
#btn-scroll-to-top {
    position: fixed;
    bottom: 30px;
    right: 30px;
    transition: all .5s ease-in-out;
    opacity: 0;
    visibility: hidden;
    z-index: 1000;
    font-size: 2em;

    &.show {
        opacity: 0.9;
        visibility: visible;
    }
}

// Tables
.table {
    thead {
        background-color: $gray-400;
    }
}
.table-narrow {
    width: auto;
}
.table-headless {
    thead {
        display: none;
    }
}
td.number {
    text-align: right;
    white-space: nowrap;
}
td.date {
    white-space: nowrap;
}
.subheading {
    font-size: $h6-font-size;
    font-weight: $font-weight-bold;
    background-color: rgba($black, .09);
}

// Blockquotes
blockquote {
    background-color: $gray-100;
    border-left: 2px solid transparentize($primary, 0.6);
    border-bottom-right-radius: 18px;
    padding: 1rem;

    p:last-child {
        margin: 0;
    }
}

// List groups
.list-group {
    .fa, .fas, .fab {
        margin-right: 1rem;
    }
    .list-group-item-iconized {
        display: flex;
        flex-direction: row;
        justify-content: left;

    }
    .list-group-img {
        padding: 0.5rem 2rem 0.5rem 0.5rem;
    }
    .list-group-img-64 {
        padding: 0.5rem 2rem 0.5rem 0.5rem;
        width: 110px;

        img {
            width: 64px;
            height: auto;
        }
        .fa, .fas, .fab {
            font-size: 64px;
        }
    }
    .list-group-img-32 {
        padding: 0.25rem 1rem 0.25rem 0.52rem;
        width: 64px;

        img {
            width: 32px;
            height: auto;
        }
        .fa, .fas, .fab {
            font-size: 32px;
        }
    }
    .list-group-text {
        display: flex;
        flex-direction: column;
        justify-content: space-evenly;
    }
    .list-group-heading {
        font-weight: $font-weight-bold;
        font-size: 110%;
    }
    .list-group-details {
        font-size: 90%;
    }
}

// Cards
.card {
    transition: all 0.5s ease-in-out;
    position: relative;

    &.uni-height {
        padding-bottom: 10%;
        height: 95%;

        .card-footer {
            position: absolute;
            width: 100%;
            bottom: 0;
        }
    }
    &:hover, &:focus {
        border-color: $primary;

        .top-image img {
            transform: scale(1.05, 1.05);
        }
        .card-link-overlay {
            background-color: $primary-fade;
        }
    }
    .top-image {
        display: flex;
        flex-shrink: 0;
        justify-content: center;
        align-items: center;
        background-color: #c4c4c4;
        height: 200px;
        overflow: hidden;

        img {
            transition: all 0.1s ease-in;
            height: 100%;
        }
    }
    .card-link-overlay {
        position: absolute;
        left: 0;
        top: 0;
        width: 100%;
        height: 100%;
        z-index: 20;
    }
}

// Figure
.imgfig {
    display: block;
    margin: 0 auto;
    text-align: center;

    .figure-img {
        max-width: 100%;
        height: auto;
        max-height: 800px;
    }

    .figure-caption {
        margin-bottom: 1rem;
    }

    a:hover, a:focus {
        background-color: transparent;
    }
}

// Pre
pre {
    padding: 1rem;
    margin: 0 0 1rem 0;
    background-color: $gray-100;
    border-radius: 4px;
}

// Navbar
#navbar {
    font-family: 'Roboto Condensed', sans-serif;

    .navbar-nav {
        .nav-link {
            padding: 0.5rem 1rem;
            &:not(.active) {
                text-shadow: 0 0 3px #000000;
            }
        }
        .active > .nav-link,
        .nav-link.active {
            background: $primary-accent;
            box-shadow: rgba(0, 0, 0, 0.25) 0 3px 9px 0 inset;
        }
    }
}

// Code highlight
.highlight {
    overflow-x: auto;
    max-width: 100%;
}
/* ... */

